fix popup loader background color. AG-33228
Squashed commit of the following:

commit 4658bc85942e62781d672074be3983cdde3e75ba
Merge: 11ca623df 656b597d1
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 6 21:09:19 2024 +0300

    Merge branch 'v5.0' into fix/AG-33228-01

commit 11ca623dfb22d0fc63b87a025a2a2b48e4622bf3
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 6 19:01:41 2024 +0300

    fix popup loader background color

--- a/Extension/src/pages/popup/components/Loader/loader.pcss
+++ b/Extension/src/pages/popup/components/Loader/loader.pcss
@@ -7,9 +7,29 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: rgba(255, 255, 2550, 0.7);
+
+        @media (prefers-color-scheme: dark) {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+    }
+}
+
+.light-mode {
+    .loader {
+        &__background {
+            background-color: rgba(255, 255, 2550, 0.7);
+        }
+    }
+}
+
+.dark-mode {
+    .loader {
+        &__background {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
     }
 }
